k8s/ruudniew-soundboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ruudniew-soundboard
  namespace: dutchdelhicacy
  labels:
    deployment-name: "ruudniew-soundboard"
spec:
  ports:
    - name: "http"
      port: 3200
      targetPort: 3200
  selector:
    deployment-name: "ruudniew-soundboard"
